--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://api.smarthydro.app/
+VITE_API_TELEMETRY_URL=https://api.smarthydro.app
+VITE_API_BUSINESS_URL=http://localhost:3000
