--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.25.3",
     "axios": "^1.9.0",
     "framer-motion": "^12.23.0",
+    "rc-queue-anim": "^2.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1"
